# Music-Production-AILab-Project

./: Advanced HandPose Tracking.ipynb  README.md  audio.py  draft.py  draft2.py  draft3.py  draft4.py  final-nearly.py  first_try.py  might_work.py  my_try_0.py  pls_work.py  pyproject.toml  rotation.py  test.py
Tutorials/: Advanced HandPose Tracking.ipynb  Handpose Tutorial.ipynb
